Applied open-rewrite